fixed vertical overlapping thanks to israr

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -33,6 +33,11 @@
 
 /* Components */
 
+.avatar img {
+    width: 45px;
+    height: 45px;
+}
+
 .alert {
   --ifm-link-color: inherit;
   --ifm-link-decoration: inherit;
